--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://jesusgarciaramirez.github.io/PersonalNotebook"
+baseURL: "https://jesusgarciaramirez.github.io"
 languageCode: en-us
 title: Jesus Garcia   
 theme: ["PaperMod"]
